--- a/package.json
+++ b/package.json
@@ -10,12 +10,17 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native/new-app-screen": "0.81.4",
+    "@react-navigation/native": "^7.1.22",
+    "@react-navigation/native-stack": "^7.8.1",
     "react": "19.1.0",
     "react-native": "0.81.4",
     "react-native-ble-plx": "^3.5.0",
     "react-native-permissions": "^5.4.2",
-    "react-native-safe-area-context": "^5.5.2",
+    "react-native-safe-area-context": "^5.6.2",
+    "react-native-screens": "^4.18.0",
+    "react-native-tts": "^4.1.1",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
